--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,17 @@ iced = { version = "0.10", features = [
 ] }
 gstreamer = "0.21.1"
 gstreamer-app = "0.21.1"
-tokio = { version = "1.28", features = ["full"] }
+
 url = "2.4.1"
 smol = "1.3.0"
 thiserror = "1.0.50"
+
+[dev-dependencies]
+tokio = { version = "1.28", features = ["full"] }
+iced = { version = "0.10", features = [
+	"tokio",
+	"debug",
+	"image",
+	"advanced",
+	"svg",
+] }
