--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,8 @@ iced = { version = "0.10", features = [
 	"advanced",
 	"svg",
 ] }
+ashpd = { version = "0.6.7", default-features = false, features = [
+	"tokio",
+	"pipewire",
+	"wayland",
+] }
