--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "gstreamer_iced"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "simple binding for gstreamer for iced"
+authors = ["Decodertalkers <aakari@tutanota.com>"]
+homepage = "https://github.com/Decodetalkers/gstreamer_iced"
+documentation = "https://docs.rs/gstreamer_iced/"
+keywords = ["pipewire", "iced", "gstreamer"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
