--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: install
-      run: sudo apt install -y gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-pipewire libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+      run: sudo apt update && sudo apt install -y gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-pipewire libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
