--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ url = "2.4.1"
 smol = "1.3.0"
 thiserror = "1.0.50"
 futures = "0.3.29"
+futures-time = "3.0.0"
 
 [dev-dependencies]
 tokio = { version = "1.34", features = ["full"] }
